testsuite/poke.pkl/print-diag-1.pk
/* { dg-do compile } */

for (e in [1,2,3])
    print e; /* { dg-error "expected a string" } */
